--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id="app">
-    <h1>Available Lessons</h1>
+    <h1>Available Lesson</h1>
 
     <div class="search-bar">
       <div class="search-container">
